Refactored using PageRequest, Page and Pageable